# gd-no-clip

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mod.json
.github/workflows/: build.yml
scripts/: build-simple-windows.cmd  build-simple-windows.ps1  build-windows-debug.bat  build-windows-debug.ps1  build-windows-release.bat  build-windows-release.ps1
src/: CMakeLists.txt  main.cpp
